# capgeminni-engineering

./: CMakeLists.txt
technical-task/: CMakeLists.txt  technical-task.cpp  technical-task.h
